tests/NormalTests/paczka1/small_fuzzy/90207433.err
Error in line 5: IEJAslH A196 78,7
Error in line 7: IEJAslH S658 38,62
Error in line 10: QLXrT01 A513 50,8
Error in line 6: IEJAslH A513 67,2
Error in line 12: IEJAslH S658 15,7
Error in line 8: doSXCK S658 18,6
